Fulfill appender with functionality. Initial tests.

--- a/log4net.Raven/log4net.Raven.Tests/log4net.Raven.Tests.csproj
+++ b/log4net.Raven/log4net.Raven.Tests/log4net.Raven.Tests.csproj
@@ -41,6 +41,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NUnit.2.5.10.11092\lib\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="Raven.Client.Lightweight, Version=1.0.0.0, Culture=neutral, PublicKeyToken=37f41c7f99471593, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
@@ -54,6 +55,12 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\log4net.Raven\log4net.Raven.csproj">
+      <Project>{A714DEDC-F5D8-4E7C-9260-CD7076C069B0}</Project>
+      <Name>log4net.Raven</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
