--- a/log4net.Raven/log4net.Raven.Tests/App.config
+++ b/log4net.Raven/log4net.Raven.Tests/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	<configSections>
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+	</configSections>
 	<connectionStrings>
 		<add name="Raven" connectionString="Url = http://raven"/>
 	</connectionStrings>
@@ -80,18 +83,12 @@
 				<levelMin value="INFO" />
 				<levelMax value="FATAL" />
 			</filter>
-			<file value="logs\log" />
-			<rollingStyle value="Date" />
-			<staticLogFileName value="false" />
-			<appendToFile value="true" />
-			<datePattern value=".yyyy-MM-dd.'txt'" />
-			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%d %-8ndc %-5thread %-5level %logger %message %timestampms %n" />
-			</layout>
+			<connectionString value="Raven"/>
+			<databaseName value="logs" />
 		</appender>
 		<root>
 			<level value="ALL"/>
-			<appender-ref ref="LogFileAppender" />
+			<appender-ref ref="RavenAppender" />
 		</root>
 	</log4net>
 </configuration>
