--- a/log4net.Raven/log4net.Raven.Tests/App.config
+++ b/log4net.Raven/log4net.Raven.Tests/App.config
@@ -5,86 +5,21 @@
 	</configSections>
 	<connectionStrings>
 		<add name="Raven" connectionString="Url = http://raven"/>
+		<add name="SecureRaven" connectionString="Url = http://localhost:8080;user=asa;password=asa"/>
 	</connectionStrings>
 	<log4net>
-		<appender name="DatabaseAppender" type="log4net.Appender.ADONetAppender">
-		<connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
-		<commandText value="INSERT INTO Errorlog(Script, Beskrivelse, UserIP, AppId, LogLevel) VALUES (@logger, @log_level + ' - ' + @message + ' - ' + @exception, @user_ip, @app_id, @log_level_number)"/>
-		<bufferSize value="1" />
-		<!-- 
-        <lossy value="true"/>
-        <evaluator type="log4net.Core.LevelEvaluator">
-            <threshold value="ERROR" />
-        </evaluator> 
-        -->
-		<filter type="log4net.Filter.LevelRangeFilter">
-			<levelMin value="ERROR" />
-			<levelMax value="FATAL" />
-		</filter>
-		<filter type="log4net.Filter.DenyAllFilter" />
-		<param name="UseTransactions" value="true"/>
-		<parameter>
-			<parameterName value="@thread"/>
-			<dbType value="String"/>
-			<size value="255"/>
-			<layout type="log4net.Layout.PatternLayout" value="%thread"/>
-		</parameter>
-		<parameter>
-			<parameterName value="@log_level"/>
-			<dbType value="String"/>
-			<size value="50"/>
-			<layout type="log4net.Layout.PatternLayout" value="%level"/>
-		</parameter>
-		<parameter>
-			<parameterName value="@logger"/>
-			<dbType value="String"/>
-			<size value="150"/>
-			<layout type="log4net.Layout.PatternLayout" value="%logger"/>
-		</parameter>
-		<parameter>
-			<parameterName value="@message"/>
-			<dbType value="String"/>
-			<size value="4000"/>
-			<layout type="log4net.Layout.PatternLayout" value="%message"/>
-		</parameter>
-		<parameter>
-			<parameterName value="@exception"/>
-			<dbType value="String"/>
-			<size value="4000"/>
-			<layout type="log4net.Layout.ExceptionLayout"/>
-		</parameter>
-		<parameter>
-			<parameterName value="@user_ip" />
-			<dbType value="String" />
-			<size value="50" />
-			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%property{userip}" />
-			</layout>
-		</parameter>
-		<parameter>
-			<parameterName value="@app_id"/>
-			<dbType value="String" />
-			<size value="20" />
-			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%property{appid}" />
-			</layout>
-		</parameter>
-		<parameter>
-			<parameterName value="@log_level_number"/>
-			<dbType value="String" />
-			<size value="20" />
-			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%property{logLevelNumber}" />
-			</layout>
-		</parameter>
-		</appender>
 		<appender name="RavenAppender" type="log4net.Raven.RavenAppender">
 			<filter type="log4net.Filter.LevelRangeFilter">
-				<levelMin value="INFO" />
+				<levelMin value="WARN" />
 				<levelMax value="FATAL" />
 			</filter>
 			<connectionString value="Raven"/>
-			<databaseName value="logs" />
+			<databaseName value="Log" />
+			<bufferSize value="1" />
+			<lossy value="true"/>
+			<evaluator type="log4net.Core.LevelEvaluator">
+				<threshold value="ERROR" />
+			</evaluator>
 		</appender>
 		<root>
 			<level value="ALL"/>
