--- a/log4net.Raven/log4net.Raven.Tests/App.config
+++ b/log4net.Raven/log4net.Raven.Tests/App.config
@@ -15,6 +15,7 @@
 			</filter>
 			<connectionString value="Raven"/>
 			<databaseName value="Log" />
+			<maxNumberOfRequestsPerSession value="100"/>
 			<bufferSize value="1" />
 			<lossy value="true"/>
 			<evaluator type="log4net.Core.LevelEvaluator">
