Disable database name.
Change readme.

--- a/log4net.Raven/log4net.Raven.Tests/App.config
+++ b/log4net.Raven/log4net.Raven.Tests/App.config
@@ -4,20 +4,19 @@
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
 	</configSections>
 	<connectionStrings>
-		<add name="Raven" connectionString="Url = http://raven"/>
-		<add name="SecureRaven" connectionString="Url = http://localhost:8080;user=asa;password=asa"/>
+		<add name="RavenLogs" connectionString="Url=http://raven; DefaultDatabase=Logs"/>
+		<add name="SecureRaven" connectionString="Url=http://localhost:8080;user=asa;password=asa"/>
 	</connectionStrings>
 	<log4net>
 		<appender name="RavenAppender" type="log4net.Raven.RavenAppender">
 			<filter type="log4net.Filter.LevelRangeFilter">
-				<levelMin value="WARN" />
+				<levelMin value="DEBUG" />
 				<levelMax value="FATAL" />
 			</filter>
 			<connectionString value="Raven"/>
 			<databaseName value="Log" />
 			<maxNumberOfRequestsPerSession value="100"/>
 			<bufferSize value="1" />
-			<lossy value="true"/>
 			<evaluator type="log4net.Core.LevelEvaluator">
 				<threshold value="ERROR" />
 			</evaluator>
