--- a/log4net.Raven/log4net.Raven.Tests/App.config
+++ b/log4net.Raven/log4net.Raven.Tests/App.config
@@ -4,19 +4,18 @@
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
 	</configSections>
 	<connectionStrings>
-		<add name="RavenLogs" connectionString="Url=http://raven; DefaultDatabase=Logs"/>
+		<add name="RavenLogs" connectionString="Url=http://raven; DefaultDatabase=Log"/>
 		<add name="SecureRaven" connectionString="Url=http://localhost:8080;user=asa;password=asa"/>
 	</connectionStrings>
 	<log4net>
 		<appender name="RavenAppender" type="log4net.Raven.RavenAppender">
 			<filter type="log4net.Filter.LevelRangeFilter">
-				<levelMin value="DEBUG" />
+				<levelMin value="INFO" />
 				<levelMax value="FATAL" />
 			</filter>
-			<connectionString value="Raven"/>
-			<databaseName value="Log" />
+			<connectionString value="RavenLogs"/>
 			<maxNumberOfRequestsPerSession value="100"/>
-			<bufferSize value="1" />
+			<bufferSize value="10" />
 			<evaluator type="log4net.Core.LevelEvaluator">
 				<threshold value="ERROR" />
 			</evaluator>
