Minor code refactoring.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-
+*.vs10x
+*.suo
 log4net.Raven/log4net.Raven.Tests/bin
-log4net.Raven/log4net.Raven.Tests/log4net.Raven.Tests.csproj.vs10x
 log4net.Raven/log4net.Raven.Tests/obj
 log4net.Raven/log4net.Raven.sln.docstates.suo
 log4net.Raven/log4net.Raven.6.0.ReSharper.user
-log4net.Raven/log4net.Raven.suo
 log4net.Raven/log4net.Raven/bin
 log4net.Raven/log4net.Raven/obj
-log4net.Raven/log4net.Raven/log4net.Raven.csproj.vs10x
+log4net.Raven/packages/
