--- a/log4net.Raven/log4net.Raven.Tests/packages.config
+++ b/log4net.Raven/log4net.Raven.Tests/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-	<package id="log4net" version="1.2.10" />
-	<package id="Newtonsoft.Json" version="4.0.2" />
-	<package id="NLog" version="2.0.0.2000" />
-	<package id="NUnit" version="2.5.10.11092" />
-	<package id="RavenDB" version="1.0.499" />
+  <package id="log4net" version="1.2.10" />
+  <package id="Newtonsoft.Json" version="4.0.2" />
+  <package id="NLog" version="2.0.0.2000" />
+  <package id="NUnit" version="2.5.10.11092" />
+  <package id="RavenDB" version="1.0.499" />
+  <package id="RavenDB-Embedded" version="1.0.499" />
 </packages>
