--- a/log4net.Raven/log4net.Raven.Tests/log4net.Raven.Tests.csproj
+++ b/log4net.Raven/log4net.Raven.Tests/log4net.Raven.Tests.csproj
@@ -94,7 +94,7 @@
     <Reference Include="System.ComponentModel.Composition" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LoggerTests.cs" />
+    <Compile Include="RavenAppenderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserException.cs" />
   </ItemGroup>
