--- a/log4net.Raven/log4net.Raven.Tests/packages.config
+++ b/log4net.Raven/log4net.Raven.Tests/packages.config
@@ -3,7 +3,7 @@
   <package id="log4net" version="2.0.0" />
   <package id="Newtonsoft.Json" version="4.0.8" />
   <package id="NLog" version="2.0.0.2000" />
-  <package id="NUnit" version="2.5.10.11092" />
-  <package id="RavenDB" version="1.0.701" />
-  <package id="RavenDB-Embedded" version="1.0.705-Unstable" />
+  <package id="NUnit" version="2.6.0.12054" />
+  <package id="RavenDB" version="1.0.888" />
+  <package id="RavenDB-Embedded" version="1.0.888" />
 </packages>
