--- a/log4net.Raven/log4net.Raven/packages.config
+++ b/log4net.Raven/log4net.Raven/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="log4net" version="2.0.0" />
-  <package id="Newtonsoft.Json" version="4.0.8" />
-  <package id="NLog" version="2.0.0.2000" />
-  <package id="RavenDB" version="1.0.888" />
+  <package id="log4net" version="2.0.3" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
+  <package id="NLog" version="3.2.1" targetFramework="net452" />
+  <package id="RavenDB.Client" version="3.0.3660" targetFramework="net452" />
 </packages>
