--- a/log4net.Raven/log4net.Raven.Tests/App.config
+++ b/log4net.Raven/log4net.Raven.Tests/App.config
@@ -1,11 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
 	</configSections>
 	<connectionStrings>
-		<add name="RavenLogs" connectionString="Url=http://raven; DefaultDatabase=Log"/>
-		<add name="SecureRaven" connectionString="Url=http://localhost:8080;user=asa;password=asa"/>
+		<add name="RavenLogs" connectionString="Url=http://raven; DefaultDatabase=Log" />
+		<add name="SecureRaven" connectionString="Url=http://localhost:8080;user=asa;password=asa" />
 	</connectionStrings>
 	<log4net>
 		<appender name="RavenAppender" type="log4net.Raven.RavenAppender">
@@ -13,16 +13,40 @@
 				<levelMin value="INFO" />
 				<levelMax value="FATAL" />
 			</filter>
-			<connectionString value="RavenLogs"/>
-			<maxNumberOfRequestsPerSession value="100"/>
+			<connectionString value="RavenLogs" />
+			<maxNumberOfRequestsPerSession value="100" />
 			<bufferSize value="10" />
 			<evaluator type="log4net.Core.LevelEvaluator">
 				<threshold value="ERROR" />
 			</evaluator>
 		</appender>
 		<root>
-			<level value="ALL"/>
+			<level value="ALL" />
 			<appender-ref ref="RavenAppender" />
 		</root>
 	</log4net>
-</configuration>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NLog" publicKeyToken="5120e14c03d0593c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.2.1.0" newVersion="3.2.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Raven.Abstractions" publicKeyToken="37f41c7f99471593" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Raven.Client.Lightweight" publicKeyToken="37f41c7f99471593" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Raven.Database" publicKeyToken="37f41c7f99471593" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" /></startup></configuration>
