New Unit Testing Project

--- a/log4net.Raven/packages/repositories.config
+++ b/log4net.Raven/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\log4net.Raven.Tests\packages.config" />
   <repository path="..\log4net.Raven\packages.config" />
+  <repository path="..\log4net.RavenTests\packages.config" />
 </repositories>
