--- a/log4net.Raven/log4net.Raven/log4net.Raven.csproj
+++ b/log4net.Raven/log4net.Raven/log4net.Raven.csproj
@@ -15,6 +15,10 @@
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
     <TargetFrameworkProfile />
+    <SccProjectName>%24/Extras/SPMatWebServices/log4net.Raven</SccProjectName>
+    <SccLocalPath>.</SccLocalPath>
+    <SccAuxPath>https://yanet.visualstudio.com/defaultcollection</SccAuxPath>
+    <SccProvider>{4CA58AB2-18FA-4F8D-95D4-32DDF27D184C}</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
